Designed hero section

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Adebayo Muis </title>
+    <meta name="keywords" content="Adebayo  Muis, Charmingdc, Frontend developer, creative frontend developer, web developer, creative portfolio">
+    <meta name="author" content="Adebayo Muis">
+    <title> Adebayo Muis - Creative frontend developer </title>
   </head>
   <body>
     <div id="root"></div>
