--- a/index.html
+++ b/index.html
@@ -5,7 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Adebayo  Muis, Charmingdc, Frontend developer, creative frontend developer, web developer, creative portfolio">
     <meta name="author" content="Adebayo Muis">
-    <title> Adebayo Muis - Creative frontend developer </title>
+    
+      <!-- Description -->
+    <meta name="description" content="Adebayo Muis - Creative frontend developer, crafting sleek interfaces and seamless experience." />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+
+    <!-- Open Graph (OG) for Social Media -->
+    <meta property="og:title" content="Adebayo Muis - Creative frontend developer" />
+    <meta property="og:description" content="Creative frontend developer, crafting sleek interfaces and seamless experience." />
+  
+    <meta property="og:image" content="/cartoon-boy.jpg" />
+    <meta property="og:url" content="https://adebayomuis.vercel.app/" />
+    <meta property="og:type" content="website" /> 
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="/cartoon-boy.jpg" />
+    <meta name="twitter:title" content=" Charmingdc - creative frontend developer" />
+    <meta name="twitter:description" content="Creative frontend developer, crafting sleek interfaces and seamless experience." />
+    <meta name="twitter:image" content="/cartoon-boy.jpg" />
+    <meta name="twitter:creator" content="@Charmingdc01" /> 
+
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://adebayomuis.vercel.app/" />
+  
+    <!-- Favicon -->
+    <link rel="icon" href="/cartoon-boy.jpg" />
+    
+    <title> Adebayo Muis - Creative Frontend Developer </title>
   </head>
   <body>
     <div id="root"></div>
