--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Adebayo  Muis, Charmingdc, Frontend developer, creative frontend developer, web developer, creative portfolio">
     <meta name="author" content="Adebayo Muis">
-    
-      <!-- Description -->
     <meta name="description" content="Adebayo Muis - Creative frontend developer, crafting sleek interfaces and seamless experience." />
+    
+    <!-- meta tag -->
+    <meta name="google-site-verification" content="8NzR52XRZ0OtyL8L2hMRRfZAQNn2gzG0lnh8aTN-E10" />
 
     <!-- Robots -->
     <meta name="robots" content="index, follow" />
