--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
     <meta property="og:title" content="Adebayo Muis - Creative frontend developer" />
     <meta property="og:description" content="Creative frontend developer, crafting sleek interfaces and seamless experience." />
   
-    <meta property="og:image" content="/cartoon-boy.jpg" />
+    <meta property="og:image" content="/illustrations/astronaut.png.webp" />
     <meta property="og:url" content="https://adebayomuis.vercel.app/" />
     <meta property="og:type" content="website" /> 
 
     <!-- Twitter Cards -->
-    <meta name="twitter:card" content="/cartoon-boy.jpg" />
+    <meta name="twitter:card" content="/illustrations/astronaut.png.webp" />
     <meta name="twitter:title" content=" Charmingdc - creative frontend developer" />
     <meta name="twitter:description" content="Creative frontend developer, crafting sleek interfaces and seamless experience." />
-    <meta name="twitter:image" content="/cartoon-boy.jpg" />
+    <meta name="twitter:image" content="/illustrations/astronaut.png.webp" />
     <meta name="twitter:creator" content="@Charmingdc01" /> 
 
     <!-- Canonical Link -->
     <link rel="canonical" href="https://adebayomuis.vercel.app/" />
   
     <!-- Favicon -->
-    <link rel="icon" href="/cartoon-boy.jpg" />
+    <link rel="icon" href="/illustrations/astronaut.png.webp" />
     
     <title> Adebayo Muis - Creative Frontend Developer </title>
   </head>
