--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Favicon -->
     <link rel="icon" href="/illustrations/astronaut.png.webp" />
     
-    <title> Adebayo Muis - Creative Frontend Developer </title>
+    <title> Adebayo Muis 🚀 - Frontend Developer </title>
   </head>
   <body>
     <div id="root"></div>
