Added location and improve SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="Adebayo  Muis, Charmingdc, Frontend developer, creative frontend developer, web developer, creative portfolio">
+    <meta name="keywords" content="Adebayo  Muis, Charmingdc, Frontend developer, creative frontend developer, web developer, creative portfolio, Nigeria frontend developer, Nigeria developers, Developer, software developer, Charming Dc">
     <meta name="author" content="Adebayo Muis">
     <meta name="description" content="Adebayo Muis - Creative frontend developer, crafting sleek interfaces and seamless experience." />
     
